@@ -493,8 +493,6 @@ mark_phase(void)
 	    mark_object(clwp->lwp_PRINTcase);
 	    mark_object(clwp->lwp_READtable);
 	    mark_object(clwp->lwp_delimiting_char);
-	    mark_object(clwp->lwp_gensym_prefix);
-	    mark_object(clwp->lwp_gentemp_prefix);
 	    mark_object(clwp->lwp_token);
 
 	    /* (current-thread) can return it at any time
